# cross_term_greeks

./: .clang-format  .gitignore  Makefile  README.md  compile_flags.txt  pyproject.toml  setup.py
cpp/: Makefile
cpp/include/decomposition/SVD/: PCA.hpp  SVDInput.hpp
cpp/include/mbs/attribution/: AttributionRequest.hpp  AttributionResult.hpp  CrossSecondOrderCalculator.hpp  IAttributionCalculator.hpp  MatrixHessianCalculator.hpp  ScalarSecondOrderCalculator.hpp
cpp/include/mbs/factors/: FactorBasis.hpp  FactorKey.hpp  FactorMove.hpp  VolFactorBasis.hpp
cpp/include/mbs/numerics/: CompensatedSum.hpp  FiniteDifference.hpp  Interpolation.hpp
cpp/include/mbs/rates/: Bootstrap.hpp  CurveCalibration.hpp  DiscountCurve.hpp  LmmSofr.hpp  SwaptionVolProxy.hpp
cpp/python/: bindings.cpp
cpp/src/attribution/: CrossSecondOrderCalculator.cpp  MatrixHessianCalculator.cpp  ScalarSecondOrderCalculator.cpp
cpp/src/decomposition/SVD/: PCA.cpp  (+1 more)
cpp/src/numerics/: FiniteDifference.cpp  Interpolation.cpp  QuadraticForm.cpp
cpp/src/rates/: Bootstrap.cpp  CurveCalibration.cpp  DiscountCurve.cpp  LmmSofr.cpp  SwaptionVolProxy.cpp
cpp/src/scenarios/: ScenarioLattice.cpp
cpp/tests/: test_compensated_sum.cpp  test_cross_second_order.cpp  test_finite_difference.cpp  test_interpolation.cpp  test_matrix_hessian.cpp  test_rates.cpp  test_scalar_second_order.cpp  test_svd_pca.cpp
scripts/: build_databricks_wheel.sh  build_wheel.sh
src/cross_term_greeks/: __init__.py  attribution.py  pca.py
tests/: test_cpp_extension.py  test_numpy_pca_numerics.py  test_python_workflow.py
(+2 files in other folders)
